--- a/render.yaml
+++ b/render.yaml
@@ -1,22 +1,18 @@
 services:
-  # Web Service for the Flask Dashboard
   - type: web
-    name: otp-express-web
+    name: otp-express
     env: python
+
     buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn srmu:app
+
+    startCommand: gunicorn app:app --timeout 120
+
     envVars:
       - key: PYTHON_VERSION
         value: 3.10.0
 
-  # Background Worker for the Telegram Bot
-  - type: worker
-    name: otp-express-bot
-    env: python
-    buildCommand: pip install -r requirements.txt
-    startCommand: python bot.py
-    envVars:
       - key: TELEGRAM_BOT_TOKEN
-        sync: false # User will set this in Render UI
-      - key: PYTHON_VERSION
-        value: 3.10.0
+        sync: false
+
+      - key: WEBHOOK_URL
+        value: https://your-app-name.onrender.com/telegram-webhook
