--- a/render.yaml
+++ b/render.yaml
@@ -1,6 +1,6 @@
 services:
   - type: web
-    name: otp-express
+    name: srmu-otp
     env: python
 
     buildCommand: pip install -r requirements.txt
@@ -15,4 +15,4 @@ services:
         sync: false
 
       - key: WEBHOOK_URL
-        value: https://your-app-name.onrender.com/telegram-webhook
+        sync: false
